--- a/indexcol.html
+++ b/indexcol.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">   
     <!-- Custome CSS -->
     <link rel="stylesheet" href="stylecol.css"></link>
-    <title>Navbars</title>
+    <title>Navbars for TEX </title>
 </head>
 <body>
 
