--- a/indexcar.html
+++ b/indexcar.html
@@ -127,7 +127,7 @@
                 
                     <div class="carousel-item">
                         <div class="container">                        
-                            <img class="producto-v2-imagen rounded-circle" src="imagenes/imagen2.jpg.jpg" alt="">
+                            <img class="producto-v2-imagen rounded-circle" src="assets/imgs/9511_blue.jpg" alt="">
                             <p class="producto-v2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque maxime id officia!
                             </p>
@@ -140,7 +140,7 @@
 
                     <div class="carousel-item">
                         <div class="container">                        
-                            <img class="producto-v2-imagen rounded-circle" src="imagenes/hans-jurgen-mager-KgRKlQXmHR0-unsplash.jpg" alt="">
+                            <img class="producto-v2-imagen rounded-circle" src="assets/imgs/9511_white.jpg" alt="">
                             <p class="producto-v2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque maxime id officia!
                             </p>
