--- a/indexcards00.html
+++ b/indexcards00.html
@@ -60,7 +60,7 @@
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="imagenes/imagen1.jpg" alt="Nature 01" class="card-img-top">
+                        <img src="assets/imgs/9511_blue.jpg" alt="Nature 01" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Bird or bear</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="imagenes/imagen2.jpg" alt="Nature 02" class="card-img-top">
+                        <img src="assets/imgs/9511_white.jpg" alt="Nature 02" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Bird or bear number 2</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
-                        <img src="imagenes/imagen3.jpg" alt="Nature 03" class="card-img-top">
+                        <img src="assets/imgs/9511_blue.jpg" alt="Nature 03" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Bird or bear number 3</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
