--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>    
             </div>
         </nav>
-        <h1 class="text-center mb-3">Bienvenidos a Timbrexpres / Especialistas en Trodat</h1>
+        <h1 class="text-center mb-3">Bienvenidos a Timbrexpres Chile / Especialistas en Trodat</h1>
         <div class="container">
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 text-center">
