Inclusión de numeradores en el menú

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <li><a href="#"
                                     class="dropdown-item">Timbres para empresas</a> </li>                                                         
                                 <li><a href="#"
-                                    class="dropdown-item">Fechadores</a> </li> 
+                                    class="dropdown-item">Fechadores y numeradores</a> </li> 
                                 <li><a href="#"
                                     class="dropdown-item">Timbres para médicos y profesionales</a> </li>
                                     <li><a href="#"
