--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </a>
             </div>
             <div class="derechos-de-autor">
-                Creado por Miguelito (2023) &#169;
+                Creado por Miguelito y Junípero - Medellín / Santiago de Chile (2023) &#169;
             </div>
         </footer>       
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
