--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
             <link href="assets/styles/styles.css" rel="stylesheet">            
         <!-- Iconos de Bootstrap -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        <title>Timbrexpres / Trodat V0.1 </title>        
+        <!-- Google fonts -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+            
+        <title class="seccion-titulo">Timbrexpres / Trodat V0.1 </title>        
     </head>
     <body>        
         <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -76,7 +81,7 @@
             </div>    
             </div>
         </nav>
-        <h1 class="text-center mb-3">Bienvenidos a Timbrexpres Chile / Especialistas en Trodat</h1>
+        <h1 class="text-center seccion-titulo">Bienvenidos a Timbrexpres Chile / Especialistas en Trodat</h1>
         <div class="container">
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 text-center">
@@ -196,7 +201,7 @@
                         <div class="col-12 col-md-4 seccion-titulo">
                         ¡Hablemos!
                         </div>
-                        <div class="col-12 col-md-4 descripcion">
+                        <div class="col-12 col-md-4 descripcion seccion-titulo">
                         Contáctanos para proveedor tus timbres y servicios de grabado.
                         </div>
                         <div class="col-12 col-md-4">
