--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
             
-        <title class="seccion-titulo">Timbrexpres / Trodat <V0 class="2"></V0> </title>        
+        <title class="seccion-titulo">Timbrexpres / Trodat V0.2> </title>        
     </head>
     <body>        
         <nav class="navbar navbar-expand-md navbar-light bg-light">
