--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                                     class="dropdown-item">Fechadores y numeradores</a> </li> 
                                 <li><a href="#"
                                     class="dropdown-item">Timbres para médicos y profesionales</a> </li>
-                                    <li><a href="#"
-                                        class="dropdown-item">Insumos para fabricantes</a> </li>
+                                <li><a href="#"
+                                    class="dropdown-item">Cuños secos / sellos de agua</a> </li>
                             </ul>                    
                         </li>
                         <li class="nav-item">
