--- a/index.html
+++ b/index.html
@@ -57,6 +57,28 @@
                                     class="dropdown-item">Cuños secos / sellos de agua</a> </li>
                             </ul>                    
                         </li>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle"
+                                id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown"
+                                aria-expanded="false"
+                                >
+                                    Grabados
+                            </a>
+                            <ul class="dropdown-menu"
+                                arialabelledby="navbarDropdown">
+                                <li><a href="#"
+                                    class="dropdown-item">Piochas</a> </li>
+                                <li><a href="#"
+                                    class="dropdown-item">Placas</a> </li>                                                         
+                                <li><a href="#"
+                                    class="dropdown-item">Lápices</a> </li> 
+                                <li><a href="#"
+                                    class="dropdown-item">Regalos</a> </li>
+                                <li><a href="#"
+                                    class="dropdown-item"></a> </li>
+                            </ul>                    
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link no-wrap" href="#"><span class="no-wrap">Piochas/placas </span></a>
                         </li>
