--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4910negro.jpg" alt="Timbre Trodat 4910" class="card-img-top">
+                        <img src="assets/imgs/4910negro.jpg" alt="Timbre Trodat 4910" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4910</h5>
                             <p class="card-text">Dimensiones 26 mm x 9 mm </p>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4911rosado.jpg" alt="Timbre Trodat 4911" class="card-img-top">
+                        <img src="assets/imgs/4911rosado.jpg" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4911</h5>
                             <p class="card-text">Dimensiones 38 mm x 14 mm </p>
@@ -126,7 +126,7 @@
                 </div>                
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4912verde.jpg" alt="Timbre Trodat 4912" class="card-img-top">
+                        <img src="assets/imgs/4912verde.jpg" alt="Timbre Trodat 4912" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4912</h5>
                             <p class="card-text">Dimensiones 47 mm x 18 mm</p>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4921negro.jpg" alt="Timbre Trodat 4921" class="card-img-top">
+                        <img src="assets/imgs/4921negro.jpg" alt="Timbre Trodat 4921" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4921</h5>
                             <p class="card-text">Timbre cuadrado de 12 mm de lado</p>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4922negro.jpg" alt="Timbre Trodat 4922" class="card-img-top">
+                        <img src="assets/imgs/4922negro.jpg" alt="Timbre Trodat 4922" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4922</h5>
                             <p class="card-text">Timbre cuadrado de 20 mm de lado</p>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4923negro.jpg" alt="Timbre Trodat 4923" class="card-img-top">
+                        <img src="assets/imgs/4923negro.jpg" alt="Timbre Trodat 4923" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4923</h5>
                             <p class="card-text">Timbre cuadrado de 30 mm de lado</p>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/fotos-10.jpg" alt="Timbre Trodat Mobile Printy 9511 rojo" class="card-img-top">
+                        <img src="assets/imgs/fotos-10.jpg" alt="Timbre Trodat Mobile Printy 9511 rojo" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat Mobile Printy 9511 rojo</h5>
                             <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm </p>
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/fotos-11.jpg" alt="Timbre Trodat Mobile Printy 9511 negro" class="card-img-top">
+                        <img src="assets/imgs/fotos-11.jpg" alt="Timbre Trodat Mobile Printy 9511 negro" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat Mobile Printy 9511 negro</h5>
                             <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/fotos-12.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top">
+                        <img src="assets/imgs/fotos-12.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat Mobile Printy 9511 blanco</h5>
                             <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/fotos-13.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top">
+                        <img src="assets/imgs/fotos-13.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat Mobile Printy 9511 blanco</h5>
                             <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
@@ -198,7 +198,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/fotos-14.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top">
+                        <img src="assets/imgs/fotos-14.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat Mobile Printy 9511 blanco</h5>
                             <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/fotos-15.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top">
+                        <img src="assets/imgs/fotos-15.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat Mobile Printy 9511 blanco</h5>
                             <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
@@ -258,7 +258,7 @@
                 </a>
             </div>
             <div class="derechos-de-autor">
-                &#169; Miguelito y Junípero - Medellín / Santiago de Chile (2023) &#169;
+                &#169; Miguelito y Junípero - Medellín / Santiago de Chile (2024) &#169;
             </div>
         </footer>       
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
