--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 arialabelledby="navbarDropdown">
                                 <li><a href="#"
                                     class="dropdown-item">Timbres personalizados</a> </li>
-                                <li><a href="bolsillo.html"
+                                <li><a href="#bolsillo.html"
                                     class="dropdown-item">Timbres para empresas</a> </li>                                                         
                                 <li><a href="#"
                                     class="dropdown-item">Fechadores y numeradores</a> </li> 
