--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container-xxl">
               <a class="navbar-brand" href="#"> <img src="assets/imgs/LOGO-TIMBREXPRES.png" alt="Logo Timbrexpres" > </a>
               <a href="#intro" class="navbar-brand">
-                <span class="fw-bold text-secondary">Timbrexpres Trodat
+                <span class="fw-bold text-secondary">Timbres - Grabados - Regalos
                 </span>
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
