--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4911rosado.jpg" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
+                        <img src="assets/imgs/portada_trodat_4911.jpg" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4911</h5>
                             <p class="card-text">Dimensiones 38 mm x 14 mm </p>
@@ -126,7 +126,7 @@
                 </div>                
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4912verde.jpg" alt="Timbre Trodat 4912" class="card-img-top  img-fluid">
+                        <img src="assets/imgs/portada_trodat_4912.jpg" alt="Timbre Trodat 4912" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4912</h5>
                             <p class="card-text">Dimensiones 47 mm x 18 mm</p>
@@ -135,10 +135,10 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4921negro.jpg" alt="Timbre Trodat 4921" class="card-img-top  img-fluid">
+                        <img src="assets/imgs/portada_trodat_4922.jpg" alt="Timbre Trodat 4922" class="card-img-top  img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4921</h5>
-                            <p class="card-text">Timbre cuadrado de 12 mm de lado</p>
+                            <h5 class="card-title">Timbre Trodat 4922</h5>
+                            <p class="card-text">Timbre cuadrado de 20 mm de lado</p>
                         </div>
                     </div>
                 </div>
