--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/4910negro.jpg" alt="Timbre Trodat 4910" class="card-img-top  img-fluid">
+                        <img src="assets/imgs/portada_trodat_4810.jpg" alt="Timbre Trodat 4810" class="card-img-top  img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4910</h5>
+                            <h5 class="card-title">Timbre Fechador Trodat 4810</h5>
                             <p class="card-text">Dimensiones 26 mm x 9 mm </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        <img src="assets/imgs/portada_trodat_4911.jpg" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
+                        <img src="assets/" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Trodat 4911</h5>
                             <p class="card-text">Dimensiones 38 mm x 14 mm </p>
