Inclusion timbres de bolsillo

--- a/n20bolsillo.html
+++ b/n20bolsillo.html
@@ -108,114 +108,30 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        9511_white.jpg
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat de bolsillo" class="card-img-top">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_9511.jpg" alt="Timbre Trodat de bolsillo" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4910</h5>
-                            <p class="card-text">Dimensiones 26 mm x 9 mm </p>
+                            <h5 class="card-title">Timbre Trodat Portátil 9511</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat 4911" class="card-img-top">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_9511_9512.jpg" alt="Timbres Trodat de bolsillo" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4911</h5>
-                            <p class="card-text">Dimensiones 38 mm x 14 mm </p>
-                        </div>
-                    </div>
-                </div>                
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat 4912" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4912</h5>
-                            <p class="card-text">Dimensiones 47 mm x 18 mm</p>
+                            <h5 class="card-title">Timbre Trodat Portátil 9511 y 9512</h5>                      
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat 4921" class="card-img-top">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_9512.jpg" alt="Timbres Trodat de bolsillo 9512" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4921</h5>
-                            <p class="card-text">Timbre cuadrado de 12 mm de lado</p>
+                            <h5 class="card-title">Timbre Trodat Portátil 9512</h5>                            
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat 4922" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4922</h5>
-                            <p class="card-text">Timbre cuadrado de 20 mm de lado</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat 4923" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4923</h5>
-                            <p class="card-text">Timbre cuadrado de 30 mm de lado</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat Mobile Printy 9511 rojo" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Mobile Printy 9511 rojo</h5>
-                            <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat Mobile Printy 9511 negro" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Mobile Printy 9511 negro</h5>
-                            <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Mobile Printy 9511 blanco</h5>
-                            <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Mobile Printy 9511 blanco</h5>
-                            <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Mobile Printy 9511 blanco</h5>
-                            <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/9511_white.jpg" alt="Timbre Trodat Mobile Printy 9511 blanco" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Mobile Printy 9511 blanco</h5>
-                            <p class="card-text">Timbre de bolsillo, dimensiones 38 mm x 14 mm</p>
-                        </div>
-                    </div>                    
-                </div>                
+                
             </div>
         </div> 
         <section id="contacto" class="contacto seccion-oscura">
