--- a/n30.fechadores.html
+++ b/n30.fechadores.html
@@ -23,7 +23,7 @@
     <body>        
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-xxl">
-              <a class="navbar-brand" href="#"> <img src="assets/imgs/icono.png" alt="Logo Timbrexpres" > </a>
+              <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
               <a href="#intro" class="navbar-brand">
                 <span class="fw-bold text-secondary">Fechadores
                 </span>
