TIMBRES PARA EMPRESAS

--- a/n10empresas.html
+++ b/n10empresas.html
@@ -17,7 +17,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
      
- <title class="seccion-titulo">Timbrexpres / Trodat V0.1 </title>   
+ <title class="seccion-titulo">Timbrexpres 2024</title>   
 </head>
 <body>
     <body>        
@@ -25,7 +25,7 @@
             <div class="container-xxl">
               <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
               <a href="#intro" class="navbar-brand">
-                <span class="fw-bold text-secondary">Timbrexpres Trodat
+                <span class="fw-bold text-secondary">Timbres para empresas
                 </span>
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -42,7 +42,7 @@
                                 data-bs-toggle="dropdown"
                                 aria-expanded="false"
                                 >
-                                    Timbres de bolsillo
+                                    Timbres de para empresas
                             </a>
                             <ul class="dropdown-menu"
                                 arialabelledby="navbarDropdown">
