--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         ¡Hablemos!
                         </div>
                         <div class="col-12 col-md-4 descripcion seccion-titulo">
-                        Contáctanos para proveedor tus timbres y servicios de grabado.
+                            Solicita tus timbres y servicios de grabado.
                         </div>
                         <div class="col-12 col-md-4">
                         <a href="mailto:luisvelasquezt@pm.me">
