--- a/n50secos.html
+++ b/n50secos.html
@@ -17,7 +17,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
      
- <title class="seccion-titulo">Timbrexpres 2024 </title>   
+ <title class="seccion-titulo">Timbrexpres  </title>   
 </head>
 <body>
     <body>        
@@ -25,7 +25,7 @@
             <div class="container-xxl">
               <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
               <a href="#intro" class="navbar-brand">
-                <span class="fw-bold text-secondary">Fechadores
+                <span class="fw-bold text-secondary">Timbrexpres Trodat
                 </span>
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -42,7 +42,7 @@
                                 data-bs-toggle="dropdown"
                                 aria-expanded="false"
                                 >
-                                    Timbres fechadores
+                                    Sellos secos
                             </a>
                             <ul class="dropdown-menu"
                                 arialabelledby="navbarDropdown">
@@ -108,23 +108,30 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        9511_white.jpg
-                        <img src="assets/imgs/portada_trodat_46130.jpg" alt="Timbre fechador 46130" class="card-img-top">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_seco.jpg" alt="Timbre Trodat de bolsillo" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 46130</h5>                            
+                            <h5 class="card-title">Cuño seco Trodat Ideal 41 mm</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        9511_white.jpg
-                        <img src="assets/imgs/portada_trodat_46140.jpg" alt="Timbre fechador 46140" class="card-img-top">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_seco.jpg" alt="Timbres Trodat de bolsillo" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 46140</h5>                            
+                            <h5 class="card-title">Cuño seco Trodat Ideal 41 mm</h5>                      
                         </div>
                     </div>
-                </div>               
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_seco.jpg" alt="Timbres Trodat de bolsillo 9512" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Cuño seco Trodat Ideal 41 mm</h5>                            
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div> 
         <section id="contacto" class="contacto seccion-oscura">
@@ -135,7 +142,7 @@
                         ¡Hablemos!
                         </div>
                         <div class="col-12 col-md-4 descripcion seccion-titulo">
-                        Solicita tus timbres y servicios de grabado.
+                            Solicita tus timbres y servicios de grabado.
                         </div>
                         <div class="col-12 col-md-4">
                         <a href="mailto:luisvelasquezt@pm.me">
