--- a/n40medicos.html
+++ b/n40medicos.html
@@ -131,6 +131,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_4911.jpg" alt="Timbres Trodat 4911" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Trodat 4911</h5>                            
+                        </div>
+                    </div>
+                </div>
                 
             </div>
         </div> 
@@ -161,13 +169,7 @@
             <img class="footer-logo" src="assets/imgs/icono-blanco.svg" alt="Logo del footer">
             <p class="footer-texto text-center">Compartamos por diferentes medios</p>
             <div class = "iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-                <a href="https://twitter.com/freecodecampES" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-twitter"></i>
-                </a>
                 
-                <a href="https://linkedin.com/freecodecampES" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-linkedin"></i>
-                </a>
                 <a href="https://www.instagram.com/freecodecamp" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-instagram"></i>
                 </a>
