--- a/n30fechadores.html
+++ b/n30fechadores.html
@@ -108,8 +108,7 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        9511_white.jpg
+                    <div class="card">                      
                         <img src="assets/imgs/portada_trodat_46130.jpg" alt="Timbre fechador 46130" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Fechador Trodat 46130</h5>                            
@@ -118,13 +117,76 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
-                        9511_white.jpg
                         <img src="assets/imgs/portada_trodat_46140.jpg" alt="Timbre fechador 46140" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Timbre Fechador Trodat 46140</h5>                            
                         </div>
                     </div>
-                </div>               
+                </div>     
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_4727.jpg" alt="Timbre fechador 4727" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Fechador Trodat 4727</h5>                            
+                        </div>
+                    </div>
+                </div>         
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                        <img src="assets/imgs/portada_trodat_4729.jpg" alt="Timbre fechador 4729" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Fechador Trodat 4729</h5>                            
+                        </div>
+                    </div>
+                </div>   
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_4750.jpg" alt="Timbre fechador 4750" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Fechador Trodat 4750</h5>                            
+                        </div>
+                    </div>
+                </div>  
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_4810.jpg" alt="Timbre fechador 4810" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Fechador Trodat 4810</h5>                            
+                        </div>
+                    </div>
+                </div>      
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_4820.jpg" alt="Timbre fechador 4820" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Fechador Trodat 4820</h5>                            
+                        </div>
+                    </div>
+                </div>       
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_5440.jpg" alt="Timbre fechador 5440" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Fechador Trodat 5440</h5>                            
+                        </div>
+                    </div>
+                </div>      
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_5460.jpg" alt="Timbre fechador 5460" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Fechador Trodat 5460</h5>                            
+                        </div>
+                    </div>
+                </div>         
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_5470.jpg" alt="Timbre fechador 5470" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Fechador Trodat 5470</h5>                            
+                        </div>
+                    </div>
+                </div>                                                                                             
             </div>
         </div> 
         <section id="contacto" class="contacto seccion-oscura">
@@ -151,16 +213,10 @@
         </section>
         <!-- Pié de página (Footer) -->
         <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-            <img class="footer-logo" src="assets/imgs/icono-blanco.svg" alt="Logo del footer">
+            <img class="footer-logo" src="assets/imgs/logotex.png" alt="Logo del footer">
             <p class="footer-texto text-center">Compartamos por diferentes medios</p>
             <div class = "iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-                <a href="https://twitter.com/freecodecampES" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-twitter"></i>
-                </a>
                 
-                <a href="https://linkedin.com/freecodecampES" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-linkedin"></i>
-                </a>
                 <a href="https://www.instagram.com/freecodecamp" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-instagram"></i>
                 </a>
