--- a/n40medicos.html
+++ b/n40medicos.html
@@ -42,7 +42,7 @@
                                 data-bs-toggle="dropdown"
                                 aria-expanded="false"
                                 >
-                                    Timbres de bolsillo
+                                    Timbres para médicos y profesionales
                             </a>
                             <ul class="dropdown-menu"
                                 arialabelledby="navbarDropdown">
@@ -166,7 +166,7 @@
         </section>
         <!-- Pié de página (Footer) -->
         <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-            <img class="footer-logo" src="assets/imgs/icono-blanco.svg" alt="Logo del footer">
+            <img class="footer-logo" src="assets/imgs/logotex.png" alt="Logo del footer">
             <p class="footer-texto text-center">Compartamos por diferentes medios</p>
             <div class = "iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
                 
