--- a/n30fechadores.html
+++ b/n30fechadores.html
@@ -186,7 +186,31 @@
                             <h5 class="card-title">Timbre Fechador Trodat 5470</h5>                            
                         </div>
                     </div>
-                </div>                                                                                             
+                </div>  
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_55510.jpg" alt="Timbre numerador 55510" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Numerador Trodat 55510</h5>                            
+                        </div>
+                    </div>
+                </div>       
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_1596.jpg" alt="Timbre numerador Trodat 1596" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Numerador Trodat 1596</h5>                            
+                        </div>
+                    </div>
+                </div>      
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">
+                       <img src="assets/imgs/portada_trodat_1598.jpg" alt="Timbre numerador Trodat 1598" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Numerador Trodat 1598</h5>                            
+                        </div>
+                    </div>
+                </div>                                                                                                                                     
             </div>
         </div> 
         <section id="contacto" class="contacto seccion-oscura">
