--- a/n20bolsillo.html
+++ b/n20bolsillo.html
@@ -131,7 +131,22 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_9430.jpg" alt="Timbres Trodat de bolsillo 9430" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Trodat Portátil 9430</h5>                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="card">                       
+                        <img src="assets/imgs/portada_trodat_9342.jpg" alt="Timbres Trodat de bolsillo 9342" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Timbre Trodat Portátil 9342</h5>                            
+                        </div>
+                    </div>
+                </div>
             </div>
         </div> 
         <section id="contacto" class="contacto seccion-oscura">
